--- a/pipeline.yml
+++ b/pipeline.yml
@@ -36,7 +36,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-          repository: ubuntu
+          repository: maven
           tag: "latest"
       inputs:
       - name: github-repo-master
